--- a/ideia aplicativo jogo/projeto/app/src/main/AndroidManifest.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MenuActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_menu"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
