--- a/ideia aplicativo jogo/projeto/app/build.gradle
+++ b/ideia aplicativo jogo/projeto/app/build.gradle
@@ -26,7 +26,9 @@ dependencies {
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.15'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.github.clans:fab:1.6.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    android.defaultConfig.vectorDrawables.useSupportLibrary = true
 }
