--- a/ideia aplicativo jogo/projeto/app/build.gradle
+++ b/ideia aplicativo jogo/projeto/app/build.gradle
@@ -23,9 +23,10 @@ android {
 }
 
 dependencies {
+    implementation  "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor  "android.arch.persistence.room:compiler:1.0.0"
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.github.safetysystemtechnology:CircleMenu:1.0.9'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.15'
     implementation 'org.apache.commons:commons-lang3:3.9'
